--- a/style.css
+++ b/style.css
@@ -1041,265 +1041,7 @@ article {
 #Projects {
   animation: view 3s cubic-bezier(0.19, 1, 0.22, 1) 10s both;
 }
-.prroject-heading {
-  font-size: 40px;
-  font-weight: 600;
-  text-align: center;
-  font-style: italic;
-  transform: scaleY(-1);
-  transform: rotateX(210deg);
-  perspective: 200px;
-  mask-image: -webkit-gradient(
-    linear,
-    right top,
-    right bottom,
-    from(transparent),
-    color-stop(21%, transparent),
-    to(rgba(0, 0, 0, 0.4))
-  );
-}
-.my-projects {
-  width: 85vw;
-  height: 60vh;
-  margin-left: 4rem;
-  margin-top: 4rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
- 
-.wrapper-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, 20rem);
-  column-gap: 7rem;
-  row-gap: 9rem;
-  justify-content: center;
-}
 
-.container {
-  text-align: center;
-  margin: 0.5rem;
-  column-gap: 2rem;
-}
-
-.container .card .face.face1 .content a {
-  transition: 0.5s;
-}
-
-.container .card .face.face2 {
-  position: relative;
-  background: whitesmoke;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
-  box-sizing: border-box;
-  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
-  transform: translateY(-230px);
-}
-
-.container .card:hover .face.face2 {
-  transform: translateY(0);
-}
-
-.container .card .face.face2 .content p,
-a {
-  font-size: 10pt;
-  margin: 0;
-  padding-left: 0;
-  padding-right: 0;
-  color: #333;
-}
-
-.container .card .face.face2 .content a {
-  text-decoration: none;
-  color: black;
-  box-sizing: border-box;
-  outline: 1px dashed #333;
-  padding: 10px;
-  margin: 15px 0 0;
-  display: inline-block;
-}
-
-.container .card .face.face2 .content a:hover {
-  background: #333;
-  color: whitesmoke;
-  box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.5);
-}
-
-.work img {
-  max-width: 100%;
-}
-.work h1,
-h2,
-h3,
-p {
-  margin: 0%;
-}
-.work {
-  position: relative;
-  width: 19.5rem;
-}
-.stream {
-  display: flex;
-}
-.stream img {
-  width: 2em;
-  height: 2em;
-  border-radius: 50%;
-}
-.rank {
-  position: absolute;
-  top: 0%;
-  right: 1em;
-  font-weight: bold;
-  font-size: 1.125rem;
-  background: rgba(0, 0, 0, 0.65);
-  padding: 0.5em 0.5em 0.75em;
-  clip-path: polygon(100% 0%, 100% 100%, 52% 76%, 52% 76%, 0 100%, 0 0);
-  z-index: 1000;
-  transition: transform 200ms cubic-bezier(0.19, 1, 0.22, 1);
-  color: white;
-}
-.front {
-  transition: 250ms;
-}
-.front-img {
-  border-radius: 0.5em;
-}
-.front .name {
-  margin: 0.75em 0;
-}
-.front .starts {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.front .stream img {
-  border-radius: 0.5em;
-}
-.front .stream img:nth-child(1) {
-  transform: translateX(50%);
-  z-index: 1;
-}
-.front .stream img:nth-child(2) {
-  transform: translateX(25%);
-}
-.stream-report .game-s {
-  text-align: left;
-}
-.front .starts a {
-  color: red;
-}
-.front .stream .card3-front-image {
-  margin-left: auto;
-}
-#card3 {
-  right: 0px;
-  left: 30%;
-}
-.back {
-  opacity: 0;
-  width: 21rem;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  top: 55%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1em;
-}
-.back .game-start {
-  font-size: 1.125rem;
-  text-align: center;
-}
-.back span {
-  font-size: 0.85em;
-  display: block;
-}
-
-.back .streamer {
-  font-size: 0.9rem;
-  width: 100%;
-  margin-left: 1rem;
-}
-.but {
-  cursor: pointer;
-  border: 0;
-  background: rgb(0, 62, 163);
-  border-radius: 100vw;
-  color: #fff;
-  font-weight: bold;
-  padding: 0.5em 1.5em;
-  transform: translateX(-10%);
-}
-.card-background {
-  background: #234;
-  position: absolute;
-  inset: 0;
-  z-index: -1;
-  transform: scale(0.2, 0.9);
-  transition: 250ms;
-  border-radius: 0.5em;
-  opacity: 0;
-  height: 50vh;
-}
-.back .streamer .github{
-  color: white;
-  font-size: 2em;
-}
-.back .streamer .github1{
-  position: absolute;
-  left: 59px;
-  top: 150px;
-}
-.back .streamer .github2{
-  position: absolute;
-  right: 210px;
-  top: 180px;
-}
-.back .streamer .github3{
-  position: absolute;
-  right: 350px;
-  top: 180px;
-}
-.back .streamer .goto {
-  position: absolute;
-  right: 82px;
-  top: 190px;
-  color: white;
-  font-size: 1.125em;
-}
-.back .icon {
-  transform: translateX(-70%);
-}
-.work:hover {
-  color: #fff;
-}
-.work:hover .front {
-  transform: translateY(-30%) scale(0.8);
-}
-.work:hover .starts {
-  opacity: 0;
-}
-.work:hover .name {
-  text-align: center;
-  transform: scale(1.2);
-}
-.work:hover .rank {
-  transform: translate(150%, -77%);
-  background: #fff;
-  color: rgb(13, 17, 19);
-}
-.work:hover .card-background {
-  opacity: 1;
-  transform: scale(1.4, 1.2);
-}
-.work:hover .back {
-  opacity: 1;
-}
 .codepen{
   margin-top: 15rem;
   text-align: center;
@@ -1562,48 +1304,64 @@ p {
 .btn-53:hover span:nth-child(6) {
   transition-delay: 0.5s;
 }
-.Card {
-  width: 500px;
-  height: 350px;
-  perspective: 1000px;
-  margin-left:2rem
+
+.card {
+  background-color: #ffffff;
+  border-radius: 12px;
+  overflow: hidden;
+  width: 350px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+  margin: 20px auto;
 }
 
-.Card-inner {
+.card-header {
+  background-color: #007bff;
+  color: white;
+  padding: 15px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.card-image {
   width: 100%;
-  height: 100%;
-  position: relative;
-  transform-style: preserve-3d;
-  transition: transform 0.999s;
+  height: auto;
 }
 
-.Card:hover .Card-inner {
-  transform: rotateY(180deg);
+.card-body {
+  padding: 20px;
 }
 
-.Card-front,
-.Card-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
+.features {
+  line-height: 2rem;
+  padding: 0;
 }
 
-.Card-front {
-  border-radius: 10px;
-  background-image: url("image_(1)-RqByJi32k-transformed.jpeg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  transform: rotateY(0deg);
+.technologies {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 15px;
 }
 
-.Card-back {
-  position: relative;
-  border-radius: 10px;
-  background-image: url("image-CM9Rw2DF8-transformed.jpeg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  transform: rotateY(180deg);
+.technologies i {
+  font-size: 24px; /* Adjust size as needed */
+  margin: 0 10px; /* Space between icons */
+  color: #007bff; /* Change color as needed */
 }
 
+/* Remove hover effect */
+.technologies i:hover {
+  transform: none; /* No transformation on hover */
+}
 
+.card-footer {
+  padding: 15px;
+  text-align: center;
+  background-color: #f8f9fa;
+}
+
+.github-link {
+  text-decoration: none;
+  color: #007bff;
+  font-size: 1rem;
+}
